--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
+        "multer": "^1.4.3",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "shelljs": "^0.8.4"
     },
     "devDependencies": {
         "concurrently": "^4.0.1"
