--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/styles": "^4.11.4",
+        "@mui/material": "^5.2.5",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "multer": "^1.4.3",
